# photon

./: .gitignore  Cargo.toml  LICENSE  Photon_Security_Design_Document.docx  README.md  attestation-test.json  design_doc_text.txt  extract_docx.ps1  test-report.sarif
photon-ai/: Cargo.toml
photon-ai/src/: lib.rs
photon-cli/: Cargo.toml
photon-cli/src/: main.rs
photon-core/: Cargo.toml
photon-core/src/: ignore.rs  lib.rs
photon-functions/: photon-functions-source.js
photon-hardhat/: README.md  index.js  package.json
photon-ir/: Cargo.toml
photon-ir/src/: lib.rs  taint.rs
photon-static/: Cargo.toml
photon-static/src/: lib.rs
photon-static/src/rules/: access_control.rs  arithmetic.rs  mod.rs  oracle.rs  reentrancy.rs  slither_rules.rs
photon-symbolic/: Cargo.toml
photon-symbolic/src/: lib.rs  smt.rs  solver.rs
photon-types/: Cargo.toml
photon-types/src/: config.rs  finding.rs  lib.rs  severity.rs
photon-vm/: Cargo.toml
photon-vm/src/: lib.rs
test-contracts/: .photon-ignore  PhotonAttestationConsumer.sol  access_control.sol  arithmetic.sol  oracle.sol  reentrancy.sol
