[workspace]
resolver = "2"
members = [
    "photon-types",
    "photon-core",
    "photon-ir",
    "photon-static",
    "photon-symbolic",
    "photon-vm",
    "photon-ai",
    "photon-cli",
]

[workspace.dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
tokio = { version = "1", features = ["full"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
rayon = "1.10"
petgraph = "0.7"
clap = { version = "4", features = ["derive"] }
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1", features = ["v4", "serde"] }
tempfile = "3"

