[package]
name = "photon-ai"
version = "0.1.0"
edition = "2021"
description = "AI-assisted analysis post-processor for Photon — supports Anthropic, OpenAI, and Groq"

[dependencies]
photon-types = { path = "../photon-types" }
thiserror.workspace = true
tracing.workspace = true
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
reqwest = { version = "0.11", features = ["json", "rustls-tls"], default-features = false }
