[package]
name = "photon-types"
version = "0.1.0"
edition = "2021"
description = "Shared types, finding schema, and severity rubric for the Photon security framework"

[dependencies]
serde.workspace = true
serde_json.workspace = true
chrono.workspace = true
uuid.workspace = true
thiserror.workspace = true
